fix(relink-authority) fix relink authority (#872)